crates/kdl-config-derive/tests/ui/unknown_attr.stderr
error: unknown field attribute: unknown_attr
 --> tests/ui/unknown_attr.rs:5:11
  |
5 |     #[kdl(unknown_attr)]
  |           ^^^^^^^^^^^^
